syntax = "proto3";

option csharp_namespace = "ClinicServiceNamespace";

import "google/protobuf/wrappers.proto";
import "google/api/annotations.proto";

package proto;


// Zoo-Clinic Service
service ClinicService{
	// Add new client
	rpc CreateClient (CreateClientRequest) returns (CreateClientResponse);
	// Update existing client data
	rpc UpdateClient (UpdateClientRequest) returns (UpdateClientResponse);
	// Delete client
	rpc DeleteClient (DeleteClientRequest) returns (DeleteClientResponse);
	// Get client by identification number
	rpc GetClientById (GetClientByIdRequest) returns (GetClientByIdResponse)
	{
		option (google.api.http) = {
			post: "/api/clientById",
			body: "*"
		};
	}
	// Get all clients
	rpc GetAllClients (GetAllClientsRequest) returns (GetAllClientsResponse){
		option (google.api.http) = {
			get: "/api/clients"
		};
	}
}
// Parameters for requesting client from db
message CreateClientRequest{
	// Document	
	string document = 1;
	// Client surname
	string surname = 2;
	// Client firstname
	string firstname = 3;
	// Client patronymic
	string patronymic = 4;
}
message CreateClientResponse{
	google.protobuf.Int32Value clientId = 1;
	int32 errCode = 2;
	string errMessage = 3;
}
message UpdateClientRequest{
	int32 clientId = 1;
	string document = 2;
	string surname = 3;
	string firstname = 4;
	string patronymic = 5;
}
message UpdateClientResponse{
	int32 errCode = 1;
	string errMessage = 2;
}
message DeleteClientRequest{
	int32 clientId = 1;
}
message DeleteClientResponse{
	int32 errCode = 1;
	string errMessage = 2;
}
message GetClientByIdRequest{
	int32 clientId = 1;
}
message GetClientByIdResponse{
	ClientResponse client = 1;
	int32 errCode = 2;
	string errMessage = 3;
}
message ClientResponse{
	int32 clientId = 1;
	string document = 2;
	string surname = 3;
	string firstname = 4;
	string patronymic = 5;
}
message GetAllClientsRequest{

}
message GetAllClientsResponse{
	repeated ClientResponse clients = 1;
	int32 errCode = 2;
	string errMessage = 3;
}